# ssl_neuron

./: .gitignore  pyproject.toml  requirements-cuda.txt  requirements.txt  setup.py
ssl_neuron/: datasets.py  graphdino.py  main.py  train.py  utils.py
ssl_neuron/configs/: config.json  contrastive-config.json  joint_jml_bil_act-config.json  neuromorpho-config.json  neuromorpho_monkey-config.json  orig-config.json  test-config.json
ssl_neuron/data/: data_utils.py  extract_allen.py  extract_allen_data.ipynb
ssl_neuron/demos/: model_inference.ipynb  train_model.ipynb
ssl_neuron/scripts/: extract_data.py
